--- a/presentation.html
+++ b/presentation.html
@@ -462,37 +462,42 @@
         /* ========== NAVIGATION ========== */
         .nav-buttons {
             position: fixed;
-            bottom: 40px;
-            left: 50%;
-            transform: translateX(-50%);
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
             display: flex;
-            gap: 30px;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 30px;
             z-index: 1000;
+            pointer-events: none;
         }
 
         .nav-btn {
-            background: rgba(0, 166, 81, 0.8);
+            background: rgba(0, 166, 81, 0.3);
             color: white;
             border: none;
-            padding: 20px 40px;
-            font-size: 28px;
-            border-radius: 10px;
+            padding: 15px 25px;
+            font-size: 20px;
+            border-radius: 8px;
             cursor: pointer;
             font-weight: 700;
             transition: all 0.3s ease;
-            backdrop-filter: blur(10px);
+            backdrop-filter: blur(5px);
             z-index: 1001;
+            pointer-events: all;
         }
 
         .nav-btn:hover:not(:disabled) {
-            background: rgba(0, 166, 81, 1);
+            background: rgba(0, 166, 81, 0.6);
             transform: scale(1.05);
         }
 
         .nav-btn:disabled {
-            background: rgba(100, 100, 100, 0.5);
+            background: rgba(100, 100, 100, 0.2);
             cursor: not-allowed;
-            opacity: 0.5;
+            opacity: 0.3;
             transform: scale(1);
         }
 
