--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         <div class="flex justify-between items-center max-w-7xl mx-auto">
             <div>
                 <p class="text-blue-100 text-sm">Chào mừng bạn!</p>
-                <h1 class="text-xl font-bold">Cambridge Prep VN 🚀</h1>
+                <h1 class="text-xl font-bold">Cambridge Prep Exam 🚀</h1>
             </div>
             <div id="btnProfile" class="bg-blue-500 p-2 rounded-full w-10 h-10 flex items-center justify-center cursor-pointer" onclick="showProfileModal()" title="Xem hồ sơ học tập">
                 <span class="text-lg">👤</span>
