--- a/presentation.html
+++ b/presentation.html
@@ -582,7 +582,7 @@
             <div class="solution-container">
                 <div class="solution-card">
                     <div class="solution-icon">🤖</div>
-                    <h2>AI Auto-Generation</h2>
+                    <h2>Automatic flashcards</h2>
                     <p>Upload Revision Paper → AI creates flashcards!</p>
                 </div>
 
@@ -687,7 +687,7 @@
 
             <div class="data-content">
                 <div class="stat-box">
-                    <h3>⭐ Outstanding Rate</h3>
+                    <h3>⭐ Outstanding Results</h3>
                     <div class="stat-comparison">
                         <div class="stat-item">
                             <div class="stat-label">Class 3A6 (Last Year)</div>
@@ -703,7 +703,7 @@
                 </div>
 
                 <div class="stat-box">
-                    <h3>🎯 Outstanding + High</h3>
+                    <h3>🎯 Outstanding + High Results</h3>
                     <div class="stat-comparison">
                         <div class="stat-item">
                             <div class="stat-label">Class 3A6 (Last Year)</div>
